Add sonar